# aleo_lambda_vm

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md
.github/workflows/: ci.yml
benches/: benchmark_aleo_credits.rs  benchmark_aleo_roulette.rs
benches/benchmarks/: aleo_credits.rs  aleo_roulette.rs  mod.rs
benches/benchmarks/helpers/: mod.rs
benches/benchmarks/vm/: mod.rs
benches/benchmarks/vm/lambdavm/: mod.rs
benches/benchmarks/vm/snarkvm/: mod.rs  stack.rs
benches/benchmarks/vm/vmtropy/: mod.rs
debug/: Cargo.toml  Makefile  README.md  heaptrack-full.sh  valgrind-full.sh
debug/src/: main.rs
docs/: circuits_and_proofs.md
examples/: manual-contraints.rs
examples/merkle-tree/: main.rs
examples/sample-program/: main.rs  sample.aleo
programs/: credits.aleo  records.aleo  roulette.aleo  token.aleo
programs/add/: main.aleo
programs/and/: main.aleo
programs/assert/: main.aleo
programs/compare/: main.aleo
programs/div/: main.aleo
programs/gt/: main.aleo
programs/hash_psd2/: main.aleo
programs/is_eq/: main.aleo
programs/is_eq_neq/: main.aleo
programs/mul/: main.aleo
programs/nand/: main.aleo
programs/nor/: main.aleo
programs/or/: main.aleo
programs/record/: main.aleo
programs/record_entries/: main.aleo
programs/shl/: main.aleo
programs/shr/: main.aleo
programs/subtract/: main.aleo
programs/ternary/: main.aleo
programs/xor/: main.aleo
src/: address.rs  circuit_io_type.rs  circuit_param_type.rs  field.rs  helpers.rs  lib.rs  main.rs  program_build.rs  record.rs  universal_srs.rs  value.rs  variable_type.rs  xxx.rs
src/address/: address.rs  compute_key.rs  mod.rs  private_key.rs  view_key.rs
src/instructions/: add.rs  and.rs  assert.rs  cast.rs  compare.rs  div.rs  gt.rs  hash_psd2.rs  helpers.rs  is_eq.rs  mod.rs  mul.rs  nand.rs  nor.rs  or.rs  shl.rs  shr.rs  sub.rs  subtract.rs  ternary.rs  xor.rs
src/jaleo/: deploy.rs  ecies.rs  execute.rs  mod.rs  record.rs  transaction.rs  transition.rs
src/jaleo/address/: address.rs  compute_key.rs  mod.rs  private_key.rs  view_key.rs
src/jaleo/types/: mod.rs  serialize.rs  user_input.rs
tests/: aleo_roulette.rs  credits_aleo.rs  marlin_proof_verification.rs  mod.rs  program.rs
tests/helpers/: mod.rs
tests/instructions/: add.rs  and.rs  assert.rs  cast.rs  compare.rs  div.rs  gt.rs  hash_psd2.rs  is_eq.rs  is_eq_neq.rs  mod.rs  mul.rs  nand.rs  nor.rs  or.rs  shl.rs  shr.rs  sub.rs  ternary.rs  xor.rs
