[package]
name = "vmtropy"
version = "0.1.0"
edition = "2021"

[profile.test]
opt-level = 3
debug-assertions = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ark-ff = { version = "^0.3.0", default-features = false }
ark-ec = { version = "^0.3.0", default-features = false }
ark-ed-on-bls12-381 = { version = "^0.3.0", features = ["r1cs"] }
ark-bls12-381 = { version = "^0.3.0", default-features = false, features = ["curve"] }
ark-std = { version = "^0.3.0", default-features = false }
ark-relations = { version = "^0.3.0", default-features = false  }
ark-poly = { version = "^0.3.0", default-features = false  }
ark-poly-commit = { version = "^0.3.0", default-features = false  }
ark-marlin = { git = "https://github.com/Entropy1729/marlin.git", branch = "impl_debug_for_vk" }

ark-r1cs-std = { version = "^0.3.0", default-features = false }
ark-snark = { version = "^0.3.0", default-features = false }

ark-serialize = { version = "^0.3.0", default-features = false }

ark-crypto-primitives = { version = "^0.3.0", default-features = true, features = [ "r1cs" ] }
decaf377 = { git = "https://github.com/Entropy1729/decaf377.git", branch = "decaf381" }

tracing = { version = "0.1", default-features = false, features = [ "attributes" ] }
tracing-subscriber = { version = "0.2" }
blake2 = { version = "0.9" }
rand_chacha = { version = "0.3.1" }
clap = { version = "4", features = ["derive", "unstable-grouped"] }

derivative = { version = "2.0", features = ["use_core"] }
digest = "0.9"

snarkvm = { git = "https://github.com/Entropy1729/snarkVM.git" }
simpleworks = { git = "https://github.com/Entropy1729/simpleworks.git" }
anyhow = "1"
hex = "0.4.3"

indexmap = "1"
dirs = "4.0.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"

log = "0.4"

sha3 = "0.10"

[[example]]
name = "sample-program"
