[package]
name = "vmtropy_debug"
version = "0.1.0"
edition = "2021"

[profile.test]
opt-level = 3
debug-assertions = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vmtropy = { path = "../" }
clap = { version = "4", features = ["derive"] }
anyhow = "1"
