[package]
name = "vmtropy_debug"
version = "0.1.0"
edition = "2021"

[profile.test]
opt-level = 3
debug-assertions = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vmtropy = { path = "../" }
clap = { version = "4", features = ["derive"] }
anyhow = "1"
ark-r1cs-std = { version = "^0.3.0", default-features = false }
simpleworks = { git = "https://github.com/Entropy1729/simpleworks.git" }
snarkvm = { git = "https://github.com/Entropy1729/snarkVM.git" }
